# edgex-gui

./: CMakeLists.txt  Dockerfile.jammy.arm64  FINAL_SUMMARY.md  LICENSE  MQTT_SETUP_GUIDE.md  README.md  build_arm64.sh  check_size.py  deployment_guide.txt  edgex_proxy.py.local  inference1.1.py.fixed  inference1.1.py.local  inference1.1.py.reverted
build-arm64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  edgex-gui-1.0.0-Linux.deb  install_manifest.txt
build-arm64/.qt/: QtDeploySupport.cmake
build-arm64/_CPack_Packages/Linux/DEB/edgex-gui-1.0.0-Linux/: control  md5sums
build-arm64/edgex-qt-ui_autogen/: deps
build-arm64/edgex-qt-ui_autogen/UVLADIE3JM/: moc_AddDeviceWizard.cpp  moc_AddDeviceWizard.cpp.d  moc_AddJsonDialog.cpp.d  moc_AddProfileDialog.cpp  moc_AddProfileDialog.cpp.d  moc_AddRuleDialog.cpp  moc_AddRuleDialog.cpp.d  moc_AddStreamDialog.cpp.d  moc_AddSubscriptionDialog.cpp.d  moc_AppServiceClient.cpp.d  moc_AppServicesView.cpp  moc_AppServicesView.cpp.d  moc_CommandClient.cpp  moc_CommandClient.cpp.d  moc_CommandExecutionView.cpp  moc_CommandExecutionView.cpp.d  moc_CoreDataClient.cpp  moc_CoreDataClient.cpp.d  moc_DashboardView.cpp.d  moc_DeviceServicesModel.cpp.d  moc_DeviceServicesView.cpp.d  moc_DevicesTableModel.cpp.d  moc_DevicesView.cpp.d  moc_EdgexClientBase.cpp.d  moc_EventsModel.cpp  moc_EventsModel.cpp.d  moc_EventsReadingsView.cpp  moc_EventsReadingsView.cpp.d  moc_MainWindow.cpp.d  moc_MetadataClient.cpp  moc_MetadataClient.cpp.d  moc_NotificationView.cpp.d  moc_ProfilesModel.cpp.d  moc_ProfilesView.cpp.d  moc_ReadingsModel.cpp  moc_ReadingsModel.cpp.d  moc_RulesClient.cpp  moc_RulesClient.cpp.d  moc_RulesEngineView.cpp.d  moc_SchedulerView.cpp.d  (+9 more)
build-arm64/edgex-qt-ui_autogen/include/: ui_AppServicesView.h  ui_DevicesView.h  ui_SystemStatusView.h
src/: AddDeviceWizard.cpp  AddDeviceWizard.h  AddJsonDialog.cpp  AddJsonDialog.h  AddProfileDialog.cpp  AddProfileDialog.h  AddRuleDialog.cpp  AddRuleDialog.h  AddStreamDialog.cpp  AddStreamDialog.h  AddSubscriptionDialog.cpp  AddSubscriptionDialog.h  AppServiceClient.cpp  AppServiceClient.h  AppServicesView.cpp  AppServicesView.h  AppServicesView.ui  CommandClient.cpp  CommandClient.h  CommandExecutionView.cpp  CommandExecutionView.h  ConfigManager.cpp  ConfigManager.h  CoreDataClient.cpp  CoreDataClient.h  DashboardView.cpp  DashboardView.h  DashboardView.ui  DataIngestionServer.cpp  DataIngestionServer.h  DeviceServicesModel.cpp  DeviceServicesModel.h  DeviceServicesView.cpp  DeviceServicesView.h  DeviceServicesView.ui  DevicesTableModel.cpp  DevicesTableModel.h  DevicesView.cpp  DevicesView.h  DevicesView.ui  (+44 more)
